Template sections page: added margin to fix issue with overlapping float

--- a/assets/aisforms/styles/aisforms-common/aisformsCommon.css
+++ b/assets/aisforms/styles/aisforms-common/aisformsCommon.css
@@ -2800,6 +2800,9 @@ and (max-width : 1024px) {
     clear: right;
     margin-left: 1.5em;
   }
+  div.SectionsRowDisplay div.SectionOperations {
+    margin-bottom: 100px;
+  }
 
   div.SectionsRowDisplay div.SectionOperations span.label,
   div.SectionsRowDisplay div.TemplateOperations span.label {
